[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# time = "0.1.12"
#psutil = { version = "3.2.1", default-features = false, features = ["memory", "process"] }
rand = "0.8.4"
